--- a/notebooks/scratch.ipynb
+++ b/notebooks/scratch.ipynb
@@ -2,11 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'YOUR_API_KEY'"
+    "api_key = '0bVmGpUGXfN8CqZHqpk6WKEkHJm5QWrq'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Perform a search"
    ]
   },
   {
@@ -60,11 +67,71 @@
     "    print(error.info())\n",
     "    print(error.read().decode(\"utf8\", 'ignore'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download OpenAPI Spec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (1512971969.py, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 13\u001b[0;36m\u001b[0m\n\u001b[0;31m    response = requests.get(url, headers=headers)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# Replace this with the url for the endpoint\n",
+    "url = 'https://navigator-ml-hxppf.eastus.inference.ml.azure.com/swagger.json'\n",
+    "\n",
+    "if not api_key:\n",
+    "    raise Exception(\"A key should be provided to invoke the endpoint\")\n",
+    "\n",
+    "# The azureml-model-deployment header will force the request to go to a specific deployment.\n",
+    "# Remove this header to have the request observe the endpoint traffic rules\n",
+    "headers = {'Content-Type':'application/json', 'Authorization':('Bearer '+ api_key), 'azureml-model-deployment': 'navigator-ml-hxppf-1' }\n",
+    "\n",
+    "response = requests.get(url, headers=headers)\n",
+    "if response.status_code == 200:\n",
+    "    swagger_json = response.json()\n",
+    "    print(\"Successfully downloaded the Swagger JSON.\")\n",
+    "\n",
+    "    with open('swagger.json', 'w') as file:\n",
+    "        json.dump(swagger_json, file, indent=4)\n",
+    "    print(\"Swagger JSON has been saved to swagger.json\")\n",
+    "else:\n",
+    "    print(f\"Failed to download Swagger JSON. Status code: {response.status_code}\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
