Fix chat history.

--- a/notebooks/scratch.ipynb
+++ b/notebooks/scratch.ipynb
@@ -42,7 +42,7 @@
     "# depending on the format your endpoint expects.\n",
     "# More information can be found here:\n",
     "# https://docs.microsoft.com/azure/machine-learning/how-to-deploy-advanced-entry-script\n",
-    "data = { \"chat_history\": [], \"question\": \"What is the PTO policy?\" }\n",
+    "data = { \"chat_history\": [{ \"inputs\": { \"question\": \"hi\" }, \"outputs\": { \"answer\": \"Hi there! How can I assist you today?\" }}], \"question\": \"What is the PTO policy?\" }\n",
     "\n",
     "body = str.encode(json.dumps(data))\n",
     "\n",
